feat(api): accept rich message types
